--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.css
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.css
@@ -88,6 +88,10 @@ div {
     background-color: red;
 }
 
+.megválaszolt {
+    pointer-events: none;
+}
+
 @media screen and (max-width: 800px) {
     #középső {
         flex-direction: column;
